# OminiNote

./: .dart_defines.example.json  .env.example  .gitignore  CANVAS_SPEC.md  CLAUDE.md  GRAPH_VIEW.md  KNOWN_ISSUES.md  LOCAL_GRAPH_HANDOFF.md  Makefile  NEXT_SESSION_PLAN.md  OminiNote-Sync-Architecture-v3.md  PAGE_BEHAVIOR_REQ.md  README.md  SHAPES_PLAN.md  SYNC_SHARING_PLAN.md  implementation_plan.md  pubspec.yaml  task.md
OmniNote-IconPack/: README.md  generate_pack.py  renderer.py
android/: build.gradle.kts
docs/: index.html  privacy.html  terms.html
lib/: main.dart
linux/: CMakeLists.txt
scripts/: release.sh
test/: audio_sync_test.dart  canvas_controller_test.dart  caret_at_tap_test.dart  checkbox_toggle_test.dart  clipboard_guard_test.dart  editor_border_visible_test.dart  editor_layout_parity_test.dart  editor_mixed_size_parity_test.dart  editor_paste_intercept_test.dart  html_text_test.dart  image_at_caret_test.dart  ink_contrast_test.dart  link_markers_test.dart  link_model_test.dart  link_phase2_test.dart  link_phase3_test.dart  markdown_text_test.dart  merge_engine_test.dart  models_test.dart  notebook_bundle_import_test.dart  onenote_import_test.dart  page_picture_cache_test.dart  partial_eraser_test.dart  pdf_export_isolate_test.dart  pdf_export_test.dart  project_model_test.dart  purge_filter_test.dart  readable_text_test.dart  rich_edit_selection_test.dart  rich_input_rules_test.dart  rich_text_lists_test.dart  search_service_test.dart  (+6 more)
tools/onenote_importer/extractor/: Cargo.toml
tools/onenote_importer/extractor/src/: main.rs
(+144 files in other folders)
